--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "nu-html-checker": "^0.1.0",
-    "onchange": "^5.2.0"
+    "onchange": "^5.2.0",
+    "superagent": "5.0.5",
+    "tar": "4.4.8"
   }
 }
